--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MADCourse</string>
-    <string name="user_directory">User Directory</string>
+    <string name="user_details">User Details</string>
     <string name="user_id">UserId:</string>
     <string name="full_name">fullName:</string>
     <string name="email">email:</string>
